--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/goshakkk/react-native-simple-onboarding#readme",
   "dependencies": {
-    "tinycolor2": "^1.4.1"
+    "tinycolor2": "^1.4.1",
+    "prop-types": "^15.5.8"
   }
 }
